# teros_challenge

./: .env.example  .gitignore  .replit  .replitignore  README.md  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
.claude/skills/cicd-master/: SKILL.md
.github/workflows/: deploy-backend.yml  pr-checks.yml  validate-frontend.yml
artifacts/next-app/: .env.local.example  package.json
artifacts/next-app/.next/: prerender-manifest.json  trace
artifacts/next-app/.next/cache/: config.json
artifacts/next-app/.next/server/: server-reference-manifest.json  webpack-runtime.js
artifacts/next-app/.replit-artifact/: artifact.edit.toml
artifacts/next-app/src/app/: AppShellWrapper.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
artifacts/next-app/src/hooks/: useDocuments.ts  useFinancialSummary.ts
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/pipeline/: chunker.py  embedder.py  ingest.py  parser.py
backend/supabase/migrations/: 20260516184336_create_documents.sql  20260516184337_create_chunks_and_match_fn.sql  20260517005821_hybrid_match_chunks.sql  20260517161000_update_document_status_constraint.sql  20260517200000_gin_index_chunks_content.sql  20260517210000_schema_constraints.sql
backend/tests/: BankStatement_2024.csv  BankStatement_2025.csv  BankStatement_2026.csv  MOCK_DATA.csv  conftest.py  sample_statement.csv  supermarket-receipt-groceries-with-barcode-total_53876-1346509.avif  test_api.py  test_chunker.py  test_parser.py  test_pipeline.py
(+32 files in other folders)
