[project]
name = "backend"
version = "0.1.0"
description = "FinSight FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "mangum>=0.21.0",
    "openai>=2.37.0",
    "pillow>=12.2.0",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "supabase>=2.30.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.47.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
